--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div class="js-vis" id="vis"></div>
-    <script src="../js/app.compiled.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
