--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://d3js.org/d3.v4.js"></script>
-    <link rel="stylesheet" href="../css/app.css" media="screen" title="oregon-geology" charset="utf-8">
+    <link rel="stylesheet" href="./css/app.css" media="screen" title="oregon-geology" charset="utf-8">
     <title>oregon-geology</title>
   </head>
   <body>
