--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://d3js.org/topojson.v2.min.js"></script>
     <link rel="stylesheet" href="./css/app.css" media="screen" title="oregon-geology" charset="utf-8">
     <title>oregon-geology</title>
   </head>
   <body>
-    <div class="js-vis" id="vis"></div>
+    <div class="js-vis map" id="vis">
+      <img src="oregon.png" alt="Oregon">
+    </div>
     <script src="../js/app.js"></script>
   </body>
 </html>
