--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <div class="js-vis map" id="vis">
+      <div class="debug-controls">
+        <input class="js-slider slider" data-extent="x0" type="range" min="0" max="500" step="2" value="0">
+        <input class="js-slider slider" data-extent="y0" type="range" min="0" max="500" step="2" value="0">
+      </div>
       <img src="oregon.png" alt="Oregon">
     </div>
     <script src="../js/app.js"></script>
